--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="./css/style.css">
 	<script defer src="./js/app.js"></script>
 	<title>Tic Tac Toe</title>
 </head>
-<body>
+<body onload = "startGame()">
 	<h1>Tic-Tac-Toe</h1>
 	<h2 id="message">Message</h2>
 
-	<section class="board">
-		<div data-box id="sq0" class="box"></div>
-		<div data-box id="sq1" class="box"></div>
-		<div data-box id="sq2" class="box"></div>
-		<div data-box id="sq3" class="box"></div>
-		<div data-box id="sq4" class="box"></div>
-		<div data-box id="sq5" class="box"></div>
-		<div data-box id="sq6" class="box"></div>
-		<div data-box id="sq7" class="box"></div>
-		<div data-box id="sq8" class="box"></div>
+	<section id= "game-play" class="board">
+		<div data-box id="sq0" class="box" onClick="move(this);"></div>
+		<div data-box id="sq1" class="box" onClick="move(this);"></div>
+		<div data-box id="sq2" class="box" onClick="move(this);"></div>
+		<div data-box id="sq3" class="box" onClick="move(this);"></div>
+		<div data-box id="sq4" class="box" onClick="move(this);"></div>
+		<div data-box id="sq5" class="box" onClick="move(this);"></div>
+		<div data-box id="sq6" class="box" onClick="move(this);"></div>
+		<div data-box id="sq7" class="box" onClick="move(this);"></div>
+		<div data-box id="sq8" class="box" onClick="move(this);"></div>
 	</section>    
 </body>
 </html>
