--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 	<script defer src="./js/app.js"></script>
 	<title>Tic Tac Toe</title>
 </head>
-<body onload = "startGame()">
+<body>
 	<h1>Tic-Tac-Toe</h1>
 	<h2 id="message">Message</h2>
 
-	<section id= "game-play" class="board">
-		<div data-box id="sq0" class="box" onClick="move(this);"></div>
-		<div data-box id="sq1" class="box" onClick="move(this);"></div>
-		<div data-box id="sq2" class="box" onClick="move(this);"></div>
-		<div data-box id="sq3" class="box" onClick="move(this);"></div>
-		<div data-box id="sq4" class="box" onClick="move(this);"></div>
-		<div data-box id="sq5" class="box" onClick="move(this);"></div>
-		<div data-box id="sq6" class="box" onClick="move(this);"></div>
-		<div data-box id="sq7" class="box" onClick="move(this);"></div>
-		<div data-box id="sq8" class="box" onClick="move(this);"></div>
+	<section id= "game-" class="board">
+		<div data-box id="sq0" class="box" ></div>
+		<div data-box id="sq1" class="box" ></div>
+		<div data-box id="sq2" class="box" ></div>
+		<div data-box id="sq3" class="box" ></div>
+		<div data-box id="sq4" class="box" ></div>
+		<div data-box id="sq5" class="box" ></div>
+		<div data-box id="sq6" class="box" ></div>
+		<div data-box id="sq7" class="box" ></div>
+		<div data-box id="sq8" class="box" ></div>
 	</section>    
 </body>
 </html>
