--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 	<h1>Tic-Tac-Toe</h1>
 	<h2 id="message">Message</h2>
 
-	<section id= "game-" class="board">
-		<div data-box id="sq0" class="box" ></div>
-		<div data-box id="sq1" class="box" ></div>
-		<div data-box id="sq2" class="box" ></div>
-		<div data-box id="sq3" class="box" ></div>
-		<div data-box id="sq4" class="box" ></div>
-		<div data-box id="sq5" class="box" ></div>
-		<div data-box id="sq6" class="box" ></div>
-		<div data-box id="sq7" class="box" ></div>
-		<div data-box id="sq8" class="box" ></div>
+	<section class="board">
+		<div id="sq0" class="box" ></div>
+		<div id="sq1" class="box" ></div>
+		<div id="sq2" class="box" ></div>
+		<div id="sq3" class="box" ></div>
+		<div id="sq4" class="box" ></div>
+		<div id="sq5" class="box" ></div>
+		<div id="sq6" class="box" ></div>
+		<div id="sq7" class="box" ></div>
+		<div id="sq8" class="box" ></div>
 	</section>    
 </body>
 </html>
