--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 	<title>Tic Tac Toe</title>
 </head>
 <body>
+
+	<section class="game">
 	<h1>Tic-Tac-Toe</h1>
-	<h2 id="message">Message</h2>
+	<h2 id="message"></h2>
 
 	<section class="board">
 		<div id="sq0" class="box" ></div>
@@ -23,5 +25,6 @@
 		<div id="sq7" class="box" ></div>
 		<div id="sq8" class="box" ></div>
 	</section>    
+	</section>
 </body>
 </html>
