get it all working

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<section class="game">
 	<h1>Tic-Tac-Toe</h1>
 	<h2 id="message"></h2>
-
+<button type="button">Restart Game</button>
 	<section class="board">
 		<div id="sq0" class="box" ></div>
 		<div id="sq1" class="box" ></div>
@@ -25,6 +25,6 @@
 		<div id="sq7" class="box" ></div>
 		<div id="sq8" class="box" ></div>
 	</section>    
-	</section>
+	
 </body>
 </html>
